--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://digitalterrene.github.io/pepperdata",
+  "homepage": "http://digitalterrene.github.io/pepperdata/",
   "name": "pepperdata",
   "version": "0.1.0",
   "private": true,
